unpackaged/main/default/objects/Project__c/fields/Account_Name_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Email_Template__c</fullName>
    <formula>Main_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name - Email Template</label>
    <type>Text</type>
</CustomField>