unpackaged/main/default/objects/Project__c/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <label>Architect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>