unpackaged/main/default/objects/Project__c/fields/Assign_by_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Assign_by_Post_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for Project if the owner should be Assigned by Post Code / Town using the PostCode object</description>
    <label>Assign by Postcode?</label>
    <type>Checkbox</type>
</CustomField>