unpackaged/main/default/objects/Project__c/fields/BCI_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>BCI_Project_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique reference identifier for the project</description>
    <externalId>true</externalId>
    <label>BCI Project ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>