unpackaged/main/default/objects/Project__c/fields/Beaumont_Tiles__c.field-meta.xml
<CustomField>
    <fullName>Beaumont_Tiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beaumont Tiles</label>
    <type>Checkbox</type>
</CustomField>