unpackaged/main/default/objects/Project__c/fields/Build_Stage__c.field-meta.xml
<CustomField>
    <fullName>Build_Stage__c</fullName>
    <description>The Stage of the Project eg. Council Approval</description>
    <label>Build Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Construction</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Frame/Brickwork</fullName>
            </value>
            <value>
                <fullName>Lock Up</fullName>
            </value>
            <value>
                <fullName>Fix</fullName>
            </value>
            <value>
                <fullName>Fit Out</fullName>
            </value>
            <value>
                <fullName>Council Approval</fullName>
            </value>
            <value>
                <fullName>Builder appointed</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Post tender</fullName>
            </value>
            <value>
                <fullName>Greenfield</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Frame &amp; Truss</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Interior Fitout</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Construction</fullName>
                <isActive>false</isActive>
                <label>Construction</label>
            </value>
            <value>
                <fullName>Frame</fullName>
                <isActive>false</isActive>
                <label>Frame</label>
            </value>
            <value>
                <fullName>Landscape</fullName>
                <isActive>false</isActive>
                <label>Landscape</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>