unpackaged/main/default/objects/Project__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction Completed</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Duplicate Project</fullName>
            </value>
            <value>
                <fullName>Not Pursuing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>