unpackaged/main/default/objects/Project__c/fields/Concatenated_Address__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Address__c</fullName>
    <description>Field used for project address matching rule and project address duplicate rule</description>
    <label>Concatenated Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>