unpackaged/main/default/objects/Project__c/fields/Construction_End__c.field-meta.xml
<CustomField>
    <fullName>Construction_End__c</fullName>
    <label>Construction End</label>
    <type>Date</type>
</CustomField>