unpackaged/main/default/objects/Project__c/fields/Cordell_ID__c.field-meta.xml
<CustomField>
    <fullName>Cordell_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Cordell ID for the Project</description>
    <externalId>true</externalId>
    <label>Cordell ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>