unpackaged/main/default/objects/Project__c/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <length>80</length>
    <type>Text</type>
</CustomField>