unpackaged/main/default/objects/Project__c/fields/Development_Type__c.field-meta.xml
<CustomField>
    <fullName>Development_Type__c</fullName>
    <label>Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Alteration &amp; Addition</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>