unpackaged/main/default/objects/Project__c/fields/Document_Library_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Library_URL__c</fullName>
    <label>Document Library URL</label>
    <type>Url</type>
</CustomField>