unpackaged/main/default/objects/Project__c/fields/Estimate_One_ID__c.field-meta.xml
<CustomField>
    <fullName>Estimate_One_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Estimate One ID for the Project</description>
    <externalId>true</externalId>
    <label>Estimate One ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>