unpackaged/main/default/objects/Project__c/fields/Final_Fit__c.field-meta.xml
<CustomField>
    <fullName>Final_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Fit</label>
    <type>Checkbox</type>
</CustomField>