unpackaged/main/default/objects/Project__c/fields/Fix_Out__c.field-meta.xml
<CustomField>
    <fullName>Fix_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fix Out</label>
    <type>Checkbox</type>
</CustomField>