unpackaged/main/default/objects/Project__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <label>Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>