unpackaged/main/default/objects/Project__c/fields/Lock_up__c.field-meta.xml
<CustomField>
    <fullName>Lock_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Up</label>
    <type>Checkbox</type>
</CustomField>