unpackaged/main/default/objects/Project__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Could not meet requirements</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Customer Job on Hold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>