unpackaged/main/default/objects/Project__c/fields/Main_Account__c.field-meta.xml
<CustomField>
    <fullName>Main_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Main Account)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>