unpackaged/main/default/objects/Project__c/fields/Number_of_Units_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_Buildings__c</fullName>
    <label>Number of Units/Buildings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>