unpackaged/main/default/objects/Project__c/fields/Offers_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Offers_Email_Template__c</fullName>
    <label>Offers - Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>