unpackaged/main/default/objects/Project__c/fields/PLS_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>PLS_Project_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Project ID from PLS</description>
    <externalId>true</externalId>
    <label>PLS Project ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>