unpackaged/main/default/objects/Project__c/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <description>The Address where the Project is taking place.</description>
    <externalId>true</externalId>
    <label>Project Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>