unpackaged/main/default/objects/Project__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <label>Project Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>