unpackaged/main/default/objects/Project__c/fields/Selected_Account__c.field-meta.xml
<CustomField>
    <fullName>Selected_Account__c</fullName>
    <label>Selected Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>