unpackaged/main/default/objects/Project__c/fields/Selected_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Selected_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Selected Account Lookup)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>