unpackaged/main/default/objects/Project__c/fields/Selected_Contact__c.field-meta.xml
<CustomField>
    <fullName>Selected_Contact__c</fullName>
    <label>Selected Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>