unpackaged/main/default/objects/Project__c/fields/Selected_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Selected_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>