unpackaged/main/default/objects/Project__c/fields/Selected_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Selected_Contact_Name__c</fullName>
    <label>Selected Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>