unpackaged/main/default/objects/Project__c/fields/Shared_Document_Password__c.field-meta.xml
<CustomField>
    <fullName>Shared_Document_Password__c</fullName>
    <label>Shared Document Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>