unpackaged/main/default/objects/Project__c/fields/Slab__c.field-meta.xml
<CustomField>
    <fullName>Slab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slab</label>
    <type>Checkbox</type>
</CustomField>