unpackaged/main/default/objects/Project__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>BCI differentiator in a project is now a Source field on the Project object</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCI</fullName>
            </value>
            <value>
                <fullName>PLS</fullName>
            </value>
            <value>
                <fullName>Cordell</fullName>
            </value>
            <value>
                <fullName>Estimate One</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>