unpackaged/main/default/objects/Project__c/fields/Specialty_Classification__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Classification__c</fullName>
    <label>Specialty Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specialist Disability Accommodation (SDA)</fullName>
            </value>
            <value>
                <fullName>NDIS</fullName>
            </value>
            <value>
                <fullName>Social and Affordable Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>