unpackaged/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Status of the Project eg. Quotation</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Post Tender</fullName>
            </value>
            <value>
                <fullName>Builder Appointed</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>