unpackaged/main/default/objects/Project__c/fields/Supply_Install__c.field-meta.xml
<CustomField>
    <fullName>Supply_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply &amp; Install</label>
    <type>Checkbox</type>
</CustomField>