unpackaged/main/default/objects/Project__c/fields/TECH_WOB_Construction_End_Formatted__c.field-meta.xml
<CustomField>
    <fullName>TECH_WOB_Construction_End_Formatted__c</fullName>
    <formula>TEXT(DAY(Construction_End__c ))+&quot;-&quot; +TEXT(MONTH(Construction_End__c ))+&quot;-&quot; +TEXT(YEAR(Construction_End__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH WOB Construction End Formatted</label>
    <type>Text</type>
</CustomField>