unpackaged/main/default/objects/Project__c/fields/TECH_WOB_Construction_Start_Formatted__c.field-meta.xml
<CustomField>
    <fullName>TECH_WOB_Construction_Start_Formatted__c</fullName>
    <formula>TEXT(DAY(Construction_Start__c ))+&quot;-&quot; +TEXT(MONTH(Construction_Start__c ))+&quot;-&quot; +TEXT(YEAR(Construction_Start__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH WOB Construction Start Formatted</label>
    <type>Text</type>
</CustomField>