unpackaged/main/default/objects/Project__c/fields/TECH_WOB_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>TECH_WOB_Lot_No__c</fullName>
    <label>TECH WOB Lot No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>