unpackaged/main/default/objects/Project__c/fields/TECH_WOB_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_WOB_Street_Name__c</fullName>
    <label>TECH WOB Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>