unpackaged/main/default/objects/Project__c/fields/TECH_WOB_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_WOB_Street_Type__c</fullName>
    <label>TECH WOB Street Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>