unpackaged/main/default/objects/Project__c/fields/Tender_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tender_Due_Date__c</fullName>
    <label>Tender Due Date</label>
    <type>Date</type>
</CustomField>