unpackaged/main/default/objects/Project__c/recordTypes/AU_Project.recordType-meta.xml
<RecordType>
    <fullName>AU_Project</fullName>
    <active>true</active>
    <description>Projects in Australia</description>
    <label>AU Project</label>
</RecordType>