unpackaged/main/default/objects/Project__c/recordTypes/NZ_Project.recordType-meta.xml
<RecordType>
    <fullName>NZ_Project</fullName>
    <active>true</active>
    <description>Projects in New Zealand</description>
    <label>NZ Project</label>
</RecordType>