unpackaged/main/default/objects/Project__c/validationRules/Loss_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Mandatory</fullName>
    <active>true</active>
    <description>When a Project Status is Closed - Lost a Loss Reason and Comment must be entered.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &#39;Closed - Lost&#39; ),
OR(ISBLANK(TEXT( Loss_Reason__c))
))</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please enter in your Loss Reasons</errorMessage>
</ValidationRule>