unpackaged/main/default/objects/Project__c/validationRules/Must_enter_Closure_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_enter_Closure_Reason</fullName>
    <active>true</active>
    <description>Validation when Status = Closed, a Closure Reason must be entered</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &#39;Closed&#39;),
ISBLANK(TEXT(Closure_Reason__c)))</errorConditionFormula>
    <errorDisplayField>Closure_Reason__c</errorDisplayField>
    <errorMessage>Please select a Closure Reason</errorMessage>
</ValidationRule>