unpackaged/main/default/objects/Project__c/validationRules/Project_Owner_Validation_On_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Owner_Validation_On_Updation</fullName>
    <active>false</active>
    <description>Only Project owner can update existing project records.</description>
    <errorConditionFormula>OR (
AND(ISCHANGED(OwnerId),PRIORVALUE(OwnerId)!= $User.Id),
AND(NOT(ISNEW()), OwnerId != $User.Id, NOT(ISCHANGED(OwnerId)))
)</errorConditionFormula>
    <errorMessage>Only Project Owner is allowed to update existing projects.</errorMessage>
</ValidationRule>