unpackaged/main/default/objects/Project__c/listViews/External_Project_Lead_Queue_Project.listView-meta.xml
<ListView>
    <fullName>External_Project_Lead_Queue_Project</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Project Queue</label>
    <queue>External_Project_Lead_Queue</queue>
    <sharedTo>
        <group>Rightshore</group>
    </sharedTo>
</ListView>