unpackaged/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Account_Name_Email_Template__c</columns>
    <columns>Selected_Contact_Name__c</columns>
    <columns>Town__c</columns>
    <columns>Postcode__c</columns>
    <columns>Construction_Start__c</columns>
    <columns>Construction_End__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
</ListView>